bug fix scrollbar

--- a/Pancake/Css-global/main.css
+++ b/Pancake/Css-global/main.css
@@ -11,7 +11,9 @@
   padding: 0;
   box-sizing: border-box;
 }
-
+html {
+  overflow-x: hidden;
+}
 body {
   font-family: "Kanit", sans-serif;
 }
