--- a/orange-section/orange-section.scss
+++ b/orange-section/orange-section.scss
@@ -185,7 +185,7 @@
 }
 
 .top-right-wrapper {
-    top: 0px;
+    top: -10px;
     right: 15px;
 }
 
@@ -201,28 +201,29 @@
         max-height: 512px;
         position: absolute;
         animation: animate 2s ease-in-out infinite alternate;
+        z-index: -1;
     }
 
     :first-child {
-        animation-delay: 200ms;
+        animation-delay: -2000ms;
     }
 
     :nth-child(2) {
-        animation-delay: 300ms;
+        animation-delay: -3000ms;
 
     }
 
     :nth-child(3) {
-        animation-delay: 400ms;
+        animation-delay: -4000ms;
 
     }
 
     :nth-child(4) {
-        animation-delay: 500ms;
+        animation-delay: -5000ms;
     }
 
     :nth-child(5) {
-        animation-delay: 600ms;
+        animation-delay: -6000ms;
     }
     .ball7 {
         left: 20px;
