--- a/twin-section/twin-section.scss
+++ b/twin-section/twin-section.scss
@@ -1,3 +1,6 @@
+html {
+	overflow-x: hidden;
+}
 .section3-wrapper {
 	display: flex;
 	flex-direction: row;
